
* KGySoft.Drawing.ImagingTools.exe
==================================
- Zooming keeps the center of the currently visible rectangle
* Pixel Format/Quantizing/Dithering:
  + Improved configuration of parameters
  + New localizable tool tips for every parameter
  - Fixing quantizing CMYK images when no new pixel format is selected 

+ API changes:
  + KGySoft.Drawing.ImagingTools.Model namespace:
    + New CustomColorInfo class: New CustomColorComponents property

+ KGySoft.Drawing.DebuggerVisualizers.dll
=========================================
+ API changes:
  + KGySoft.Drawing.DebuggerVisualizers.Serialization namespace:
    + New CustomColorSerializationInfoBase class for serializing custom colors

* KGySoft.Drawing.DebuggerVisualizers.Wpf.dll
=============================================
* Better support of ScRGB and color profile-based colors.

+ KGySoft.Drawing.DebuggerVisualizers.SkiaSharp.dll
===================================================
+ New visualizer for SKPMColor type
+ New visualizer for SKColorF type


~~~~~~~~~
+ v3.1.0:
~~~~~~~~~

+ KGySoft.Drawing.DebuggerVisualizers.SkiaSharp.dll
===================================================
+ A new debugger visualizer assembly to support SkiaSharp types.


~~~~~~~~~
! v3.0.0:
~~~~~~~~~

* KGySoft.Drawing.ImagingTools.exe
==================================
- Adjust Gamma: Adjusting the slider with the mouse not always worked.
- Supporting CMYK images
- Fixing language initialization from custom location

+ API changes:
  + KGySoft.Drawing.ImagingTools.Model namespace:
    + New CustomBitmapInfo class
    + New CustomColorInfo class
    + New CustomPaletteInfo class
  + KGySoft.Drawing.ImagingTools.ViewModel namespace:
    + ViewModelFactory class:
      + New FromPalette overload
      + New FromCustomBitmap method
      + New FromCustomColor method
      + New FromCustomPalette method

! KGySoft.Drawing.DebuggerVisualizers.dll
=========================================