@@ -19,13 +19,16 @@
 
 + API changes:
   + KGySoft.Drawing.ImagingTools.Model namespace:
-    + New CustomColorInfo class: New CustomColorComponents property
+    + CustomBitmapInfo class: New CustomPalette property
+    + CustomPaletteInfo class: New EntryType property
+    + CustomColorInfo class: New CustomColorComponents property
 
 + KGySoft.Drawing.DebuggerVisualizers.dll
 =========================================
 + API changes:
   + KGySoft.Drawing.DebuggerVisualizers.Serialization namespace:
-    + New CustomColorSerializationInfoBase class for serializing custom colors
+    + New CustomColorSerializationInfo class for serializing custom colors
+    + New CustomPaletteSerializationInfo class for serializing custom palettes
 
 * KGySoft.Drawing.DebuggerVisualizers.Wpf.dll
 =============================================
